--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head> 
 </head>
 <body>
-    <img id="mainimage" src ="images/start.png" alt = "usemap" usemap = "#lessons"/>
+    <img id="mainimage" src ="start.png" alt = "usemap" usemap = "#lessons"/>
     
     <!-- MAPS -->
     <map name = "lessons" id="startmap">
