--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<head> 
+<head>
+    <style>
+        video {
+          -webkit-transform: scaleX(-1);
+          transform: scaleX(-1);
+        }
+        </style>
 </head>
 <body>
     <img style="max-width:100%; max-height:100%;" id="mainimage" src ="start.png" alt = "usemap" usemap = "#lessons"/>
