--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <img style="max-width:100%; max-height:100%;" id="mainimage" src ="start.png" alt = "usemap" usemap = "#lessons"/>
-    
+    <img style=“position:absolute; top:300;left:206;” width=“480” height=“360” src=“overlay.png” id="canvas-overlay"/>
+
     <!-- MAPS -->
     <map name = "lessons" id="startmap">
         <area onclick="onPayClick()"  shape = "rect" coords = "905,850,1235,920" alt = "HTML Tutorial"
