--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     </div>
 
 
-    <script src="https://rawgit.com/sitepoint-editors/jsqrcode/master/src/qr_packed.js"></script>
+    <script src="qr_packed.js"></script>
     <script src="index.js"></script>
 </body>
