--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         </style>
 </head>
 <body>
-    <img style="max-width:100%; max-height:100%;" id="mainimage" src ="start.png" alt = "usemap" usemap = "#lessons"/>
+    <img style="max-width:100%; max-height:100%;" id="mainimage" src ="start.gif" alt = "usemap" usemap = "#lessons"/>
     <img style="position:absolute; z-index:5; top:300;left:206;" hidden width="480" height="360" src="overlay.png" id="canvas-overlay"/>
 
     <!-- MAPS -->
